<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="12dp"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_margin="12dp"
        android:background="@drawable/bg_form">

        <TextView
            android:id="@+id/n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_margin="12dp"
        android:background="@drawable/bg_form">

        <TextView
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp"

            ></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_margin="12dp"
        android:background="@drawable/bg_form">

        <TextView
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"

            ></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_margin="12dp"
        android:background="@drawable/bg_form">

        <TextView
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp"

            ></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:layout_margin="12dp"
        android:background="@drawable/bg_form">

        <TextView
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="16sp"

            ></TextView>
    </RelativeLayout>

    <Button
        android:id="@+id/submitData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/department"
        android:layout_centerInParent="true"
        android:onClick="toast"
        android:text="Submit"></Button>


</RelativeLayout>